# uni-pass

./: .gitignore  LICENSE  README.md  Transcript_parsing.py  check_missing.py  debug_crawler.py  plan_rag.md  pyproject.toml  requirements.txt
app/: main.py
app/api/endpoints/: graduation.py  regulations.py  validator.py
app/core/: config.py  database.py
app/models/: db.py  graduation.py  transcript.py
app/schemas/: regulation.py  timetable.py  transcript.py
app/services/: base_parser.py  checkers.py  crawler.py  llm_client.py  parser.py  rag_service.py  recommender.py  report_service.py  rules.py  schedule.py  timetable_parser.py  timetable_recommender.py  validator.py
app/services/checkers/: __init__.py  base.py  context.py  detailed_requirements.py  general_education.py  major.py
app/utils/: building_converter.py  coordinate_fetcher.py  cse_curriculum.py  department.py  earned_credit.py  excel_to_csv.py  excel_to_db.py  mapping_generator.py  regulations_seeder.py  schedule_parsing.py  transcript_parsing.py
data/: building_coords.csv  building_mapping.csv  courses_list_2026_1.xlsx  output.csv  parsed_schedule.csv  regulations_seed.json
db/: README.md  schema.sql
scripts/: demo_capture.py
tests/: test_cse_curriculum.py  test_department_normalization.py  test_earned_credit.py  test_llm_client.py  test_rag_service.py  test_report_service.py  test_schedule.py  test_timetable_parser.py  test_timetable_recommender.py  test_transcript_api.py  test_transcript_parsing.py  test_validator.py  test_validator_updated.py
